--- a/holoscreen-app/package.json
+++ b/holoscreen-app/package.json
@@ -13,6 +13,7 @@
     "medusa"
   ],
   "scripts": {
+    "product:migrations:run": "medusa-product-migrations-up",
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
     "build": "cross-env npm run clean && npm run build:server && npm run build:admin",
     "build:server": "cross-env npm run clean && tsc -p tsconfig.server.json",
@@ -20,7 +21,7 @@
     "watch": "cross-env tsc --watch",
     "test": "cross-env jest",
     "seed": "cross-env medusa seed -f ./data/seed.json",
-    "start": "medusa migrations run && medusa start",
+    "start": "cross-env npm run build && medusa start",
     "start:custom": "cross-env npm run build && node --preserve-symlinks --trace-warnings index.js",
     "dev": "cross-env npm run build:server && medusa develop"
   },
